kubernetes/traefik_ingress/proxmox_external.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox1-service
  namespace: default
spec:
  type: ExternalName
  externalName: 10.0.0.9
  ports:
  - port: 8006
    targetPort: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox2-service
  namespace: default
spec:
  type: ExternalName
  externalName: 10.0.0.50
  ports:
  - port: 8006
    targetPort: 8006
