kubernetes/traefik_ingress/goinfraroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: go-infra-route
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`infra.trahan.dev`)
    kind: Rule
    services:
    - name: go-infra-service
      port: 8993
  tls:
    secretName: trahan-dev-cert
