kubernetes/traefik_ingress/longhorn.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`longhorn.trahan.dev`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 8000
  tls:
    secretName: trahan-dev-cert
