kubernetes/traefik_ingress/prometheus.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prometheus.trahan.dev`)
    kind: Rule
    services:
    - name: prometheus-server-ext
      port: 9090
  tls:
    secretName: trahan-dev-cert
